# cmake-templates

./: .clang-format  CMakeLists.txt
cmake/: Conan.cmake
src/: CMakeLists.txt  Main.cpp
very-simple/: CMakeLists.txt
